--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>llmt</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html style="font-family: Helvetica,Arial,sans-seri">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>llmt</title>
+</head>
+<body style="margin: 20px 0px 0px 0px;
+-webkit-app-region: drag;
+background: white;">
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
 
