--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>llmt</title>
 </head>
-<body style="margin: 20px 0px 0px 0px;
+<body style="margin: 25px 0px 0px 0px;
 -webkit-app-region: drag;
-background: white;">
+background-size: contain;
+background-color: white">
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
