feat: rewrite arragements and import third-party icons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="margin: 25px 0px 0px 0px;
 -webkit-app-region: drag;
-background-size: contain;
+background-size: cover;
 background-color: white">
 <div id="app"></div>
 <!-- built files will be auto injected -->
