fix: fix titlebar bug

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <title>llmt</title>
 </head>
 <body style="margin: 25px 0 0 0;
--webkit-app-region: drag;
 background-size: cover;
 background-color: white">
+<div
+  style="height: 24px; width: 100%; -webkit-app-region: drag;
+  position: fixed; z-index: 9999; top: 0; background-color: white;
+  border-bottom: solid 1px #d8d8d8;"></div>
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
